deploy/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: io-destination
spec:
  host: io-service
  subsets:
    - name: v1
      labels:
        app: io-service
        version: v1
    - name: v2
      labels:
        app: io-service
        version: v2
